--- a/pages/abrir-cuenta-form.html
+++ b/pages/abrir-cuenta-form.html
@@ -36,118 +36,85 @@
           <a href="#" class="encabezado-lista__link">Servicios</a>
         </li>
         <li class="encabezado-lista__item">
-          <input
-            class="encabezado__buscar"
-            type="search"
-            placeholder="Buscar servicios"
-          />
+          <input class="encabezado__buscar" type="search" placeholder="Buscar servicios" />
         </li>
         <li class="encabezado-lista__item">
-          <a
-            href="./abrir-cuenta-form.html"
-            class="encabezado-lista__item-boton encabezado-lista__item-boton--azul"
-            >Abrir cuenta</a
-          >
+          <a href="./abrir-cuenta-form.html" class="encabezado-lista__item-boton encabezado-lista__item-boton--azul">Abrir
+            cuenta</a>
         </li>
         <li class="encabezado-lista__item">
-          <a href="#" class="encabezado-lista__item-boton"
-            >Acceder a la cuenta</a
-          >
+          <a href="#" class="encabezado-lista__item-boton">Acceder a la cuenta</a>
         </li>
       </ul>
     </header>
-
+  
     <section class="banner">
       <h3 class="banner__titulo">
         ¡Alura-cuenta es el primer paso hacia la libertad financiera!
       </h3>
     </section>
-
+  
     <main class="container">
       <ul class="breadcrumb">
         <li>Inicio</li>
         <li class="breadcrumb__pagina">Abrir cuenta</li>
       </ul>
-
+  
       <section class="formulario">
         <div class="formulario__container">
-          <img
-            src="../img/status-1.png"
-            alt="Etapa uno de tres"
-            class="formulario__etapas"
-          />
+          <img src="../img/status-1.png" alt="Etapa uno de tres" class="formulario__etapas" />
           <h2 class="formulario__titulo-texto">
             ¡Completa los campos a continuación para crear tu cuenta corriente!
           </h2>
         </div>
-
+  
         <form class="principal__formulario" data-formulario>
           <fieldset class="formulario__campo">
             <label class="campo__etiqueta" for="nombre">Nombre</label>
-            <input name="nombre" id="nombre" class="campo__completo" />
+            <input name="nombre" id="nombre" class="campo__completo" type="texto" minlength="3" required/>
             <span class="mensaje-error"></span>
           </fieldset>
-
+  
           <fieldset class="formulario__campo">
             <label class="campo__etiqueta" for="email">E-mail</label>
-            <input name="email" id="email" class="campo__completo" />
+            <input name="email" id="email" class="campo__completo" type="email" minlength="5" required />
             <span class="mensaje-error"></span>
           </fieldset>
           <fieldset class="formulario__campo">
-            <label class="campo__etiqueta" for="identificacion"
-              >Identificación</label
-            >
-            <input
-              name="identificacion"
-              id="identificacion"
-              class="campo__completo campo__completo--menor"
-            />
+            <label class="campo__etiqueta" for="identificacion">Identificación</label>
+            <input name="identificacion" id="identificacion" class="campo__completo campo__completo--menor"
+              type="texto"  minlength="8" required/>
             <span class="mensaje-error"></span>
           </fieldset>
           <fieldset class="formulario__campo">
-            <label class="campo__etiqueta" for="cuil"
-              >CUIL/CUIT (Solo números)</label
-            >
-            <input
-              name="cuil"
-              id="cuil"
-              class="campo__completo campo__completo--menor"
-            />
+            <label class="campo__etiqueta" for="cuil">CUIL/CUIT (Solo números)</label>
+            <input name="cuil" id="cuil" class="campo__completo campo__completo--menor" type="texto" minlength="10" maxlength="14" pattern="\d{2}[-\/]?\d{8}[-\/]?\d{1}" required/> <!--expresiones regulares-->
             <span class="mensaje-error"></span>
           </fieldset>
           <fieldset class="formulario__campo">
             <label class="campo__etiqueta" for="fecha_nacimiento">
               Fecha de nacimiento
             </label>
-            <input
-              name="fecha_nacimiento"
-              id="fecha_nacimiento"
-              class="campo__completo campo__completo--menor"
-            />
+            <input name="fecha_nacimiento" id="fecha_nacimiento" class="campo__completo campo__completo--menor" type="date" required/>
             <span class="mensaje-error"></span>
           </fieldset>
           <fieldset class="formulario__terminos">
-            <input name="terminos" class="terminos__input" />
+            <input name="terminos" class="terminos__input" type="checkbox" required/>
             <p class="terminos__texto">
               He leído y conozco las condiciones para el tratamiento de mis
               datos descrito en las <a href="#">Políticas de Privacidad</a>.
             </p>
             <span class="mensaje-error"></span>
           </fieldset>
-
+  
           <div>
-            <input
-              value="Siguiente"
-              class="formulario__boton"
-              id="enviar"
-              data-boton-enviar
-            />
+            <input value="Siguiente" class="formulario__boton" id="enviar" data-boton-enviar type="submit"/>
             <span class="mensaje-error"></span>
           </div>
         </form>
       </section>
     </main>
-
+  
     <footer class="pie_pagina">
       <section class="pie_pagina__empresa">
         <h2 class="pie_pagina__titulo">AluraBank</h2>
@@ -204,5 +171,7 @@
         </h2>
       </section>
     </footer>
+    <script src="../JS/main.js" type="module"></script>  <!--modularizacion-->
   </body>
-</html>
+  
+  </html>
