validacion y guardado de info

--- a/pages/abrir-cuenta-form-2.html
+++ b/pages/abrir-cuenta-form-2.html
@@ -81,7 +81,7 @@
             ¡Haga clic en la imagen de abajo para realizar la captura de su
             imagen!
           </p>
-
+          <!--reconocimiento facial-->
           <img
             src="../img/reconocimento.png"
             alt="Cara con ojos y una sonrisa dentro de un marco."
@@ -170,5 +170,6 @@
         </h2>
       </section>
     </footer>
+    <script src="../JS/camera.js"></script>
   </body>
 </html>
