--- a/pages/abrir-cuenta-form.html
+++ b/pages/abrir-cuenta-form.html
@@ -67,7 +67,7 @@
             ¡Completa los campos a continuación para crear tu cuenta corriente!
           </h2>
         </div>
-  
+        <!--Inicio formulario-->
         <form class="principal__formulario" data-formulario>
           <fieldset class="formulario__campo">
             <label class="campo__etiqueta" for="nombre">Nombre</label>
